--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,67 +9,52 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#EEC42C2C"
         android:layout_gravity="bottom"
-        android:orientation="horizontal"
-        >
+        android:background="#E7CF86"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/button_repeat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="RE"
             android:layout_weight="1"
-            />
+            android:background="@drawable/icon_repeat" />
 
         <Button
             android:id="@+id/button_backward"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="BA"
             android:layout_weight="1"
-            />
+            android:background="@drawable/icon_backward" />
 
         <Button
             android:id="@+id/button_play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="PY"
             android:layout_weight="1"
-            />
+            android:background="@drawable/icon_play" />
 
         <Button
             android:id="@+id/button_forward"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="FW"
             android:layout_weight="1"
-            />
+            android:background="@drawable/icon_forward" />
 
         <Button
             android:id="@+id/button_favourite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="FA"
             android:layout_weight="1"
-            />
+            android:background="@drawable/icon_favourite" />
 
         <Button
             android:id="@+id/button_playlist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="PL"
             android:layout_weight="1"
-            />
+            android:background="@drawable/icon_playlist" />
 
-        <!--
-        RE -> Repeat
-        BA -> Backward
-        PY -> Play
-        FW -> Forward
-        FA -> Favourite
-        PL -> Play List
-        -->
 
     </LinearLayout>
 
